<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <DUT Name="E_TowerLamp" Id="{e86f6cd1-f9e6-45eb-a187-c4714b576caf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_TowerLamp :
(
	OFF, //대기상태 (Signal)
	RED, // Alarm
	YELLOW, // Warning
	GREEN, // Running
	BLUE, // Maint
	WHITE, // Idle
	BUZZER
):= OFF;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>