<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <GVL Name="GVL_IO" Id="{a5f3292d-798a-4b6c-af88-b59309d83086}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Digital IO to Byte
	aDigitalInputIO AT %I* 	: ARRAY[1..9]OF BYTE; //KL1408 9EA
	aDigitalOutputIO AT %Q* : ARRAY[1..4]OF BYTE; //KL2408 4EA
	
	// Analog Input to INT
	aAnalogInputIO AT %I* 	: ARRAY[1..40]OF INT;
	aAnalogOutputIO AT %Q* 	: ARRAY[1..29]OF INT;
	aAnalogInputIO2 AT %I*	: ARRAY[1..2]OF UINT;
	//Solenoid Valve
	aOutputSolValve AT %Q* 	: ARRAY[1..3]OF DWORD; //Solenoid Valve
	
	aMaxValueController	: ARRAY[1..29]OF REAL ; //Device Max Value from UI
	aMaxValueGauge : ARRAY[1..9]OF REAL ; //Gauge Max Value frome UI
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>