<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <POU Name="P92_Maintenance" Id="{17478ea4-373a-4676-aa4e-f86e85a19514}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P92_Maintenance
VAR_INPUT
	eTowerLamp				: E_TowerLamp := E_TowerLamp.OFF; // 대기상태
	rTrigSignalRamp			: R_TRIG; // Signal Ramp Trig
END_VAR
VAR_OUTPUT

END_VAR
VAR
	(* Input *)
	//Light
	bLightCP				: BOOL;
	rTrigReactorCabinetSwitch	: R_TRIG;
	rTrigReactorCabinetMagnet 	: R_TRIG;
	fTrigReactorCabinetMagnet 	: F_TRIG;
	rTrigGasCabinetSwitch		: R_TRIG;
	rTrigGasCabinetMagnet		: R_TRIG;
	fTrigGasCabinetMagnet		: F_TRIG;

	bReactorCabinetLampSwitch : BOOL;
	bGasCabinetLampSwitch	: BOOL;
	
	bReactorCabientMagnet	: BOOL;
	bGasCabinetMagnet		: BOOL;
	bPowerDistributeMagnet	: BOOL;
	
	(* Output to Device *)
	// Cabinet Lamp
	bReactorCabinetLamp		: BOOL;
	bGasCabinetLamp			: BOOL;
	bPowerDistributeLamp	: BOOL;
	
	bSMPS24V480WFault		: BOOL;
	bSMPS24V72WFault		: BOOL;
	bSMPS15VPlusFault		: BOOL;
	bSMPS15VMinusFault		: BOOL;
	bSMPS15CP				: BOOL;
	// Signal Tower
	bSignalTower			: BYTE;
	TimerSignalTower		: TON;
	bBuzzerStop				: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Read from Device Value *)
//Lamp
bLightCP 				:= GVL_IO.aDigitalInputIO[5].6;
bReactorCabientMagnet 	:= GVL_IO.aDigitalInputIO[3].6;
bGasCabinetMagnet 		:= GVL_IO.aDigitalInputIO[3].7;
bPowerDistributeMagnet	:= GVL_IO.aDigitalInputIO[4].0;

bSMPS15CP				:= GVL_IO.aDigitalInputIO[5].7;
//SMPS
bSMPS24V480WFault	:= NOT(GVL_IO.aDigitalInputIO[4].3);
bSMPS24V72WFault	:= NOT(GVL_IO.aDigitalInputIO[4].4);
bSMPS15VPlusFault	:= NOT(GVL_IO.aDigitalInputIO[4].5);
bSMPS15VMinusFault	:= NOT(GVL_IO.aDigitalInputIO[4].6);

// Reactor Cabinet Lamp
rTrigReactorCabinetSwitch(CLK:=GVL_IO.aDigitalInputIO[1].2);
rTrigReactorCabinetMagnet(CLK:=GVL_IO.aDigitalInputIO[3].6);
fTrigReactorCabinetMagnet(CLK:=GVL_IO.aDigitalInputIO[3].6);
IF rTrigReactorCabinetSwitch.Q OR rTrigReactorCabinetMagnet.Q OR fTrigReactorCabinetMagnet.Q THEN
	bReactorCabinetLamp := NOT(bReactorCabinetLamp);
END_IF
// Gas Delivery Cabinet Lamp
rTrigGasCabinetSwitch(CLK:= GVL_IO.aDigitalInputIO[1].3);
rTrigGasCabinetMagnet(CLK:= GVL_IO.aDigitalInputIO[3].7);
fTrigGasCabinetMagnet(CLK:= GVL_IO.aDigitalInputIO[3].7);
IF rTrigGasCabinetSwitch.Q THEN
	bGasCabinetLamp := NOT(bGasCabinetLamp);
ELSIF fTrigGasCabinetMagnet.Q THEN
	bGasCabinetLamp := TRUE;
ELSIF rTrigGasCabinetMagnet.Q THEN
	bGasCabinetLamp := FALSE;
END_IF

// Power Distribute Unit Lamp
bPowerDistributeLamp := NOT(bPowerDistributeMagnet); //Magnet Switch

(* Blink Tower Lamp *)
CASE eTowerLamp OF
	E_TowerLamp.OFF: // Idle 상태
		bSignalTower := 0;
	E_TowerLamp.RED: //Alarm
		TimerSignalTower(IN:=TRUE, PT:=T#500MS);
		IF TimerSignalTower.Q THEN
			TimerSignalTower(IN:=FALSE);
			IF bSignalTower = 0 THEN
				bSignalTower := 2#0000_0001; // RED
			ELSE
				bSignalTower := 0;
			END_IF
		END_IF
	E_TowerLamp.YELLOW: //Warning
		TimerSignalTower(IN:=TRUE, PT:=T#1S);
		IF TimerSignalTower.Q THEN
			TimerSignalTower(IN:=FALSE);
			IF bSignalTower = 0 THEN
				bSignalTower := 2#0000_0010; // YELLOW
			ELSE
				bSignalTower := 0;
			END_IF
		END_IF
	E_TowerLamp.GREEN: //Rcipe Running
		TimerSignalTower(IN:=TRUE, PT:=T#1S);
		IF TimerSignalTower.Q THEN
			TimerSignalTower(IN:=FALSE);
			IF bSignalTower = 0 THEN
				bSignalTower := 2#0000_0100; // GREEN
			ELSE
				bSignalTower := 0;
			END_IF
		END_IF	
	E_TowerLamp.BLUE: //Maintenance
		bSignalTower := 2#0000_1000; // BLUE
	E_TowerLamp.WHITE: //Idle
		bSignalTower := 2#0001_0000; // White
	ELSE
		bSignalTower := 0;		
END_CASE

(* Buzzer On/Off *)
// IF E_TowerLamp.BUZZER <> GVL_IO.aInterlockEnable[1].2 THEN
// 	E_TowerLamp.BUZZER := GVL_IO.aInterlockEnable[1].2;
// END_IF

(* Blink Signal Tower *)
//bBuzzerStop := GVL_IO.aInputState[4].5;
// CASE eSignalTower OF
// 	E_SignalTower.OFF:
// Signal Tower OFF 상태
// 		bSignalTower := 0;
// 		;
// 	E_SignalTower.RED: //Alarm 
// 		TimerSignalTower(IN:=TRUE, PT:=T#500MS);
// 		IF TimerSignalTower.Q THEN
// 			TimerSignalTower(IN:=FALSE);
// 			IF bSignalTower = 0 THEN
// 				bSignalTower := 2#0000_0001; // RED
// 			ELSE
// 				bSignalTower := 0;
// 			END_IF
// 		END_IF

// 	E_SignalTower.YELLOW: //Warning
// 		TimerSignalTower(IN:=TRUE, PT:=T#1S);
// 		IF TimerSignalTower.Q THEN
// 			TimerSignalTower(IN:=FALSE);
// 			IF bSignalTower = 0 THEN
// 				bSignalTower := 2#0000_0010; // YELLOW
// 			ELSE
// 				bSignalTower := 0;
// 			END_IF
// 		END_IF
// 	E_SignalTower.GREEN: //Recipe Run
// 		TimerSignalTower(IN:=TRUE, PT:=T#1S);
// 		IF TimerSignalTower.Q THEN
// 			TimerSignalTower(IN:=FALSE);
// 			IF bSignalTower = 0 THEN
// 				bSignalTower := 2#0000_0100; // GREEN
// 			ELSE
// 				bSignalTower := 0;
// 			END_IF
// 		END_IF	
// 	E_SignalTower.BLUE: //Maint Mode
// 		bSignalTower := 2#0000_1000;	
// 	E_SignalTower.WHITE: //Idle
// 		bSignalTower := 2#0001_0000;	
// 	ELSE
// 		bSignalTower := 0;
// END_CASE

(* Write to Device Value *)
GVL_IO.aDigitalOutputIO[2].5 	:= bReactorCabinetLamp;
GVL_IO.aDigitalOutputIO[2].6 	:= bGasCabinetLamp;
GVL_IO.aDigitalOutputIO[2].7 	:= bPowerDistributeLamp;

// Tower Lamp
GVL_IO.aDigitalOutputIO[1].0 		:= bSignalTower.0; //0:RED-Alarm,
GVL_IO.aDigitalOutputIO[1].1 		:= bSignalTower.1; //1:YELLOW,-Warning 
GVL_IO.aDigitalOutputIO[1].2 		:= bSignalTower.2; //2:GREEN-Running
GVL_IO.aDigitalOutputIO[1].3 		:= bSignalTower.3; //3:BLUE-Maint
GVL_IO.aDigitalOutputIO[1].4 		:= bSignalTower.4; //4:WHITE-Idle
GVL_IO.aDigitalOutputIO[1].5 		:= bSignalTower.5; //5:BUZZER-Alarm
]]></ST>
    </Implementation>
    <LineIds Name="P92_Maintenance">
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="65" Count="2" />
      <LineId Id="395" Count="0" />
      <LineId Id="388" Count="0" />
      <LineId Id="391" Count="3" />
      <LineId Id="389" Count="0" />
      <LineId Id="55" Count="1" />
      <LineId Id="93" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="85" Count="1" />
      <LineId Id="80" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="106" Count="4" />
      <LineId Id="299" Count="0" />
      <LineId Id="301" Count="2" />
      <LineId Id="42" Count="0" />
      <LineId Id="448" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="381" Count="0" />
      <LineId Id="447" Count="0" />
      <LineId Id="449" Count="0" />
      <LineId Id="443" Count="1" />
      <LineId Id="446" Count="0" />
      <LineId Id="450" Count="0" />
      <LineId Id="453" Count="7" />
      <LineId Id="451" Count="0" />
      <LineId Id="461" Count="0" />
      <LineId Id="464" Count="7" />
      <LineId Id="463" Count="0" />
      <LineId Id="462" Count="0" />
      <LineId Id="473" Count="7" />
      <LineId Id="472" Count="0" />
      <LineId Id="481" Count="1" />
      <LineId Id="484" Count="0" />
      <LineId Id="483" Count="0" />
      <LineId Id="486" Count="0" />
      <LineId Id="485" Count="0" />
      <LineId Id="445" Count="0" />
      <LineId Id="494" Count="0" />
      <LineId Id="491" Count="2" />
      <LineId Id="487" Count="0" />
      <LineId Id="397" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="408" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="439" Count="1" />
      <LineId Id="442" Count="0" />
      <LineId Id="441" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="160" Count="0" />
      <LineId Id="148" Count="1" />
      <LineId Id="257" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="437" Count="1" />
      <LineId Id="261" Count="0" />
      <LineId Id="143" Count="0" />
      <LineId Id="409" Count="0" />
      <LineId Id="164" Count="3" />
      <LineId Id="262" Count="3" />
      <LineId Id="223" Count="0" />
      <LineId Id="412" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="399" Count="2" />
      <LineId Id="403" Count="1" />
      <LineId Id="406" Count="1" />
      <LineId Id="405" Count="0" />
      <LineId Id="402" Count="0" />
      <LineId Id="424" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="178" Count="1" />
      <LineId Id="161" Count="1" />
      <LineId Id="159" Count="0" />
      <LineId Id="144" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="387" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="338" Count="4" />
      <LineId Id="140" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>